fix dark mode on docsearch component

--- a/styles/docsearch.css
+++ b/styles/docsearch.css
@@ -1,9 +1,6 @@
 /* this was copy/paste/modified from @docsearch/css/dist/_variables.css */
-/* they only support dark mode via data-theme on the html element */
-/* but we use media queries for that */
 :root {
-  /* @media (prefers-color-scheme: dark) { */
-  &:where([data-theme="dark"]) {
+  &:where(.dark) {
     --docsearch-text-color: #f5f6f7;
     --docsearch-container-background: rgba(9, 10, 17, 0.8);
     --docsearch-modal-background: #15172a;
